# AIDA_Translator

TestCases/: output.xlsx
TestCases/TestCase1/: .project  Dizionario.rfisrf_dictionary  TestCase1.uml
TestCases/TestCase10/: .project  Dizionario.rfisrf_dictionary  TestCase10.uml
TestCases/TestCase11/: .project  Dizionario.rfisrf_dictionary  TestCase11.uml
TestCases/TestCase11/AA/C/: ClassesRelation.dot  meson.build
TestCases/TestCase11/AA/C/Feasibility/: attributes.csv
TestCases/TestCase11/AA/C/Feasibility/FeasibilityClasses/Stazione/: meson.build
TestCases/TestCase11/AA/C/Feasibility/FeasibilityClasses/Stazione/include/: config.h  envdt.h
TestCases/TestCase11/AA/C/Feasibility/FeasibilityClasses/Stazione/include/Logica/: ClasseMainClass_C1.h  ClasseMainClass_C1_priv.h  ClasseSubClass_C2_priv.h  ClasseSubClass_C3.h  ClasseSubClass_C3_priv.h  ClasseSubClass_C4.h  ClasseSubClass_C4_priv.h
TestCases/TestCase11/AA/C/Feasibility/FeasibilityClasses/Stazione/src/: config.c
TestCases/TestCase11/AA/C/Feasibility/FeasibilityClasses/Stazione/src/Logica/: ClasseMainClass_C1.c  ClasseSubClass_C2.c  ClasseSubClass_C3.c  ClasseSubClass_C4.c
TestCases/TestCase11/AA/C/Feasibility/FeasibilityIfc/src/: cmdFeasibilityIfc.c
TestCases/TestCase11/AA/C/LdS/: LogicInterface.c  LogicInterface.h  lds.def  meson.build
TestCases/TestCase11/AA/C/LdS/Stazione/: meson.build
TestCases/TestCase11/AA/C/LdS/Stazione/include/: config.h  envdt.h  interface.h  lds_param.h
TestCases/TestCase11/AA/C/LdS/Stazione/include/Logica/: ClasseMainClass_C1.h  ClasseMainClass_C1_priv.h  ClasseSubClass_C2.h  ClasseSubClass_C2_priv.h  ClasseSubClass_C3.h  ClasseSubClass_C3_priv.h  ClasseSubClass_C4.h  ClasseSubClass_C4_priv.h
TestCases/TestCase11/AA/C/LdS/Stazione/src/: config.c
TestCases/TestCase11/AA/C/LdS/Stazione/src/Logica/: ClasseMainClass_C1.c  ClasseSubClass_C2.c  ClasseSubClass_C3.c  ClasseSubClass_C4.c
TestCases/TestCase11/AA/C/LdV/: LogicInterface.c  LogicInterface.h
TestCases/TestCase11/AA/C/LdV/Stazione/include/: config.h  envdt.h  interface.h  lds_param.h
TestCases/TestCase11/AA/C/LdV/Stazione/src/: config.c
TestCases/TestCase12/: .project  Dizionario.rfisrf_dictionary  TestCase12.uml
TestCases/TestCase12/AA/C/Feasibility/: attributes.csv  meson.build
TestCases/TestCase12/AA/C/Feasibility/FeasibilityClasses/Stazione/include/: config.h  envdt.h  lds_param.h
TestCases/TestCase12/AA/C/Feasibility/FeasibilityClasses/Stazione/include/Logica/: ClasseMainClass_C1_priv.h  ClasseSubClass_C2_priv.h  ClasseSubClass_C3.h  ClasseSubClass_C3_priv.h
TestCases/TestCase12/AA/C/Feasibility/FeasibilityClasses/Stazione/src/: config.c
TestCases/TestCase12/AA/C/Feasibility/FeasibilityClasses/Stazione/src/Logica/: ClasseMainClass_C1.c  ClasseSubClass_C2.c  ClasseSubClass_C3.c
TestCases/TestCase12/AA/C/LdS/Stazione/: meson.build
TestCases/TestCase12/AA/C/LdS/Stazione/include/: config.h  envdt.h  interface.h
TestCases/TestCase12/AA/C/LdS/Stazione/include/Logica/: ClasseMainClass_C1.h  ClasseMainClass_C1_priv.h  ClasseSubClass_C2.h  ClasseSubClass_C2_priv.h  ClasseSubClass_C3.h  ClasseSubClass_C3_priv.h
TestCases/TestCase12/AA/C/LdS/Stazione/src/: config.c
TestCases/TestCase12/AA/C/LdS/Stazione/src/Logica/: ClasseMainClass_C1.c  ClasseSubClass_C2.c  ClasseSubClass_C3.c
TestCases/TestCase13/: .project  Dizionario.rfisrf_dictionary  TestCase13.uml
TestCases/TestCase18/AA/C/LdV/: LogicInterface.c  LogicInterface.h  meson.build
TestCases/TestCase18/AA/C/LdV/Stazione/include/: config.h  envdt.h  interface.h  lds_param.h
TestCases/TestCase18/AA/C/LdV/Stazione/src/: config.c
TestCases/TestCase23/AA/C/Feasibility/FeasibilityClasses/Stazione/: meson.build
TestCases/TestCase23/AA/C/Feasibility/FeasibilityClasses/Stazione/include/: config.h  envdt.h
TestCases/TestCase23/AA/C/Feasibility/FeasibilityClasses/Stazione/include/Logica/: ClasseMainClass_C1.h  ClasseMainClass_C1_priv.h  ClasseSubClass_C2.h  ClasseSubClass_C2_priv.h
TestCases/TestCase23/AA/C/Feasibility/FeasibilityClasses/Stazione/src/: config.c
TestCases/TestCase23/AA/C/Feasibility/FeasibilityClasses/Stazione/src/Logica/: ClasseMainClass_C1.c  ClasseSubClass_C2.c
(+1637 files in other folders)
